<resources>
    <string name="app_name">Akçakoca Şehir Rehberi</string>
    <string name="action_settings">Settings</string>
    <string name="address_label">Adres:</string>
    <string name="phone_label">Telefon:</string>
    <string name="email_label">E-Posta:</string>
    <string name="web_label">Web:</string>
    <string name="alert_dialog_call_number_message">Telefon numarasını aramak istiyor musunuz?</string>
    <string name="alert_dialog_web_site_message">Web sitesine yönlendirilmek istiyor musunuz?</string>
    <string name="alert_dialog_internet_message">Web sitesine erişmek için internet bağlantısı gerekmektedir.</string>
    <string name="alert_dialog_warning_label">Uyarı!</string>
    <string name="alert_dialog_ok_button">Tamam</string>
    <string name="alert_dialog_cancel_button">İptal</string>
    <string name="please_wait_message">Lütfen Bekleyiniz...</string>
    <string name="president_message_title">Başkanın Mesajı</string>
    <string name="presidents_message_text">Değerli Misafirimiz;\n\nEn yakın Karadeniz’e hoş geldiniz…\n\nBir tarafı yeşilin bin bir tonu, bir tarafı engin mavi olan; huzurun doğa ile buluştuğu Karadeniz

coğrafyasında geçireceğiniz anların keyfini daha da çıkarabilmeniz ve tatilinizi daha etkili planlayabilmeniz

için Akçakoca Şehir Rehberi’ni oluşturduk.\n\nTatiliniz boyunca ihtiyacınız olabilecek tüm konaklama tesisleri, restoranlar, ulaşım firmaları, tarihi ve

doğal güzellikler ile sağlık/devlet kuruluşlarını kolaylıkla ulaşıp, ücretsiz olarak incelemenize olanak

sağlayan bir aplikasyon tasarladık. Bu mobil uygulama ile şehrin tüm rehberine tek dokunuş uzaklığında

olacaksınız.\n\nKaradeniz’in muhteşem güzellikleri içerisinde keyifle güzel anılar biriktirmeniz dileği ile…\n\nEcz. Cüneyt Yemenici\n\nAkçakoca Belediye Başkanı</string>
    <string-array name="main_menu_items" formatted="false" >
        <item>Şehir</item>
        <item>Tarihi Mekanlar</item>
        <item>Görmeden Geçme</item>
        <item>Sağlık</item>
        <item>Ulaşım</item>
        <item>Acil Numaralar</item>
        <item>Harita</item>
        <item>Hakkımızda</item>
    </string-array>
    <string-array name="cities_menu_items" formatted="false" >
        <item>Oteller</item>
        <item>Restorantlar</item>
        <item>Cafe - Barlar</item>
        <item>Plajlar</item>
    </string-array>
    <string-array name="health_menu_items" formatted="false" >
        <item>Hastaneler</item>
        <item>Eczaneler</item>
    </string-array>
    <string-array name="spinner_items" formatted="false" >
        <item>Oteller</item>
        <item>Tatil Köyleri</item>
        <item>Pansiyonlar</item>
        <item>Restoranlar</item>
        <item>Cafeler</item>
        <item>Barlar</item>
        <item>Plajlar</item>
        <item>Tarihi Mekanlar</item>
        <item>Görmeden Geçme</item>
        <item>Hastaneler</item>
        <item>Eczaneler</item>
    </string-array>
    <string name="title_city_activity">Şehir</string>
    <string name="title_hotels_activity">Oteller</string>
    <string name="title_restaurants_activity">Restorantlar</string>
    <string name="title_cafes_activity">Cafeler</string>
    <string name="title_bars_activity">Barlar</string>
    <string name="title_beaches_activity">Plajlar</string>
    <string name="title_historical_places_activity">Tarihi Mekanlar</string>
    <string name="title_must_see_activity">Görmeden Geçme</string>
    <string name="title_health_activity">Sağlık</string>
    <string name="title_hospitals_activity">Hastaneler</string>
    <string name="title_pharmacies_activity">Eczaneler</string>
    <string name="title_transportation_activity">Ulaşım</string>
    <string name="title_emergency_activity">Acil Numaralar</string>
    <string name="title_map_activity">Harita</string>
    <string name="title_about_us_activity">Hakkımızda</string>
    <string name="title_resorts_activity">Tatil Köyleri</string>
    <string name="title_hostels_activity">Pansiyonlar</string>
    <string name="title_cafesmenu_activity">Cafe-Bar</string>
    <string name="title_caves_activity">Mağaralar</string>
    <string name="title_mosques_activity">Camiler</string>
    <string-array name="emergency_names">
        <item>1 Nolu Sağlık Ocağı</item>
        <item>2 Nolu Sağlık Ocağı</item>
        <item>Akçakoca Belediyesi</item>
        <item>Akçakoca Devlet Hastanesi</item>
        <item>Akçakoca Kaymakamlığı</item>
        <item>Akçakoca İtfaiye</item>
        <item>Akçakoca Jandarma Komutanlığı</item>
        <item>Akçakoca Emniyet Müdürlüğü</item>
        <item>Akçakoca Veteriner Kliniği</item>
    </string-array>
    <string-array name="emergency_phones">
        <item>03806114171</item>
        <item>03806116914</item>
        <item>03806114110</item>
        <item>03806114005</item>
        <item>03806114060</item>
        <item>03806114969</item>
        <item>03806189300</item>
        <item>03806114551</item>
        <item>05327135685</item>
    </string-array>
    <string-array name="hotels_names" formatted="false" >
        <item>Bayraktar Otel</item>
        <item>Diapolis Oteli</item>
        <item>Esentepe Oteli</item>
        <item>Mesen Otel</item>
        <item>Otel Akçakoca</item>
        <item>Otel Akçaşehir</item>
        <item>Otel Vadi</item>
        <item>Sezgin Oteli</item>
        <item>Sky Tower Otel</item>
        <item>Tuana Beach Otel</item>
        <item>Turkuaz Beach Oteli</item>
        <item>Yeni Çınar Otel</item>
        <item>Yılmaz Otel</item>
    </string-array>
    <string-array name="hotels_address" formatted="false" >
        <item>Osmaniye Mahallesi Çınar Sokak No: 2</item>
        <item>Yalı Mahallesi İnönü Caddesi No: 30-32-34</item>
        <item>Hacıyusuflar Mahallesi Koru Sokak No: 1</item>
        <item>Edilli Köyü Mesen Sokak No: 40</item>
        <item>Ayazlı Mahallesi Eredli Caddesi No: 33-35</item>
        <item>Hacıyusuflar Mahallesi İstanbul Caddesi No: 182</item>
        <item>Ayazlı Mahallesi Düzce Caddesi No: 20</item>
        <item>Osmaniye Mahallesi Atatürk Caddesi No: 44</item>
        <item>Yalı Mahallesi İnönü Caddesi No: 42 Ceneviz Sokak No: 2</item>
        <item>Hacıyusuflar Mahallesi Hüsnü Gonca Caddesi No: 4 Kale Yolu</item>
        <item>Osmaniye Mahallesi Atatürk Caddesi No: 77-73</item>
        <item>Hacıyusuflar Mahallesi Bülbül Sokak No: 15/B</item>
        <item>Osmaniye Mahallesi Atatürk Caddesi No: 38</item>
    </string-array>
    <string-array name="hotels_coordinates" formatted="false" >
        <item>41.089517,31.129258</item>
        <item>41.089047,31.118551</item>
        <item>41.085229,31.104330</item>
        <item>41.079507,31.076183</item>
        <item>41.089816,31.144773</item>
        <item>41.084289,31.103666</item>
        <item>41.082833,31.176630</item>
        <item>41.089593,31.129976</item>
        <item>41.088688,31.117217</item>
        <item>41.086617,31.103721</item>
        <item>41.090080,31.139896</item>
        <item>41.085036,31.103419</item>
        <item>41.089546,31.129139</item>
    </string-array>
    <string-array name="hotels_phones" formatted="false" >
        <item>03806116677</item>
        <item>03806116600</item>
        <item>03806117879</item>
        <item>03806114436</item>
        <item>03806114525</item>
        <item>03806119306</item>
        <item>03806188484</item>
        <item>03806114162</item>
        <item>4447759</item>
        <item>03806114335</item>
        <item>03806115000</item>
        <item>03806117003</item>
        <item>03806114741</item>
    </string-array>
    <string-array name="hotels_email" formatted="false" >
        <item>info@bayraktarotel.com</item>
        <item>-</item>
        <item>-</item>
        <item>info@mesenotel.com</item>
        <item>info@otelakcakoca.com.tr</item>
        <item>-</item>
        <item>-</item>
        <item>sezginotel@hotmail.com</item>
        <item>info@skytowerhotel.com</item>
        <item>oteltuana@gmail.com</item>
        <item>-</item>
        <item>yenicinar_otel@hotmail.com,rezervasyon@akcakocacinarotel.com</item>
        <item>-</item>
    </string-array>
    <string-array name="hotels_web" formatted="false" >
        <item>http://www.bayraktarotel.com/</item>
        <item>http://www.diapolishotelakcakoca.com.tr/</item>
        <item>http://www.esentepeotel.com/</item>
        <item>http://www.mesenotel.com/</item>
        <item>http://www.otelakcakoca.com.tr</item>
        <item>-</item>
        <item>http://otelvadi.com.tr/</item>
        <item>http://www.sezginotel.com/index.php</item>
        <item>http://www.skytowerhotel.com/</item>
        <item>http://www.oteltuana.com/</item>
        <item>http://www.turkuazbeachotel.com/</item>
        <item>http://akcakocacinarotel.com/</item>
        <item>-</item>
    </string-array>
    <string-array name="hostels_names" formatted="false">
        <item>Akçakoca Öğretmenevi</item>
        <item>Bahar Pansiyon</item>
        <item>Beş Yıldız Apart Pansiyon</item>
        <item>Çamlık Pansiyon</item>
        <item>Can Apart</item>
        <item>Demir Pansiyon</item>
        <item>Deniz Feneri Pansiyon</item>
        <item>Diapolis Apartları</item>
        <item>Doğus Pansiyon</item>
        <item>Emel Pansiyon</item>
        <item>Hostel Mimoza</item>
        <item>Kar Pansiyon</item>
        <item>Mutlu Pansiyon</item>
        <item>Name Pansiyon</item>
        <item>Pandul Pansiyon</item>
        <item>Poyraz Pansiyon</item>
        <item>Prestij Apart</item>
        <item>Sağlam Pansiyon</item>
        <item>Sahil Pansiyon</item>
        <item>Şahin Pansiyon</item>
        <item>Tunç Pansiyon</item>
    </string-array>
    <string-array name="hostels_address" formatted="false">
        <item>Hacıyusuflar Mahallesi İstanbul Caddesi No: 152</item>
        <item>Osmaniye Mahallesi Çınar Sokak No: 4</item>
        <item>Ayazlı Mahallesi İzgi Sokak No: 14</item>
        <item>Karaburun Mücavir Köyü 101 Sokak No: 24</item>
        <item>Hacıyusuflar Mahallesi Anıt Sokak No: 10</item>
        <item>Mücavir Karaburun 2 Sokak No: 54</item>
        <item>Osmaniye Mahallesi Atatürk Caddesi No: 92</item>
        <item>Hacıyusuflar Mahallesi Bülbül Sokak No: 11</item>
        <item>Osmaniye Mahallesi 2 Sokak No: 11</item>
        <item>Ayazlı Mahallesi Ankara Caddesi No: 39</item>
        <item>Cumhuriyet Mahallesi Yanmaz Sokak No: 12 Esentepe Mevkii</item>
        <item>Mücavir Melenağzı Köyü 2 Sokak No: 124</item>
        <item>Ayazlı Mahallesi Çınar Sokak No: 1A</item>
        <item>Osmaniye Mahallesi Karabekir Caddesi No: 27/1</item>
        <item>Osmaniye Mahallesi Gençlik Sokak No: 4</item>
        <item>Osmaniye Mahallesi Atatürk Caddesi No: 112</item>
        <item>Osmaniye Mahallesi Ankara Caddesi No: 48</item>
        <item>Akçakoca İlçesi</item>
        <item>Mücavir Karaburun Köyü 101 Sokak No: 17</item>
        <item>Yalı Mahallesi Pazar Sokak No 9 </item>
        <item>Ayazlı Mahallesi Deniz Sokak No: 6</item>
    </string-array>
    <string-array name="hostels_coordinates" formatted="false">
        <item>41.087299,31.106872</item>
        <item>41.089496,31.129255</item>
        <item>41.083940,31.172353</item>
        <item>41.085942,31.120374</item>
        <item>41.086761,31.099622</item>
        <item>41.072198,31.010236</item>
        <item>41.089987,31.137975</item>
        <item>41.084886,31.102992</item>
        <item>41.089783,31.139535</item>
        <item>41.089574,31.130848</item>
        <item>41.087099,31.111275</item>
        <item>41.072520,31.000175</item>
        <item>41.089793,31.129434</item>
        <item>41.087682,31.140651</item>
        <item>41.089964,31.138982</item>
        <item>41.089944,31.138724</item>
        <item>41.089138,31.130336</item>
        <item>41.090898,31.151096</item>
        <item>41.072970,31.016596</item>
        <item>41.089299,31.123000</item>
        <item>41.095607,31.187216</item>
    </string-array>
</resources>