<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/view_toolbar"
        android:id="@+id/toolbar"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_tiny"
        android:onClick="hotelsButtonClicked"
        android:foreground="?selectableItemBackground"
        android:id="@+id/cvCity">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/hotels_menu_item_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/hotel_icon"/>

            <TextView
                android:id="@+id/hotels_menu_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/title_hotels_activity"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:onClick="restaurantsButtonClicked"
        android:foreground="?selectableItemBackground"
        android:id="@+id/cvRestaurants">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/restaurants_item_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/restaurant_icon"/>

            <TextView
                android:id="@+id/restaurants_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/title_restaurants_activity"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:onClick="cafesButtonClicked"
        android:foreground="?selectableItemBackground"
        android:id="@+id/cvCafe">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/cafe_menu_item_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/cafe_icon"/>

            <TextView
                android:id="@+id/cafe_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/title_cafesmenu_activity"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:onClick="beachesButtonClicked"
        android:foreground="?selectableItemBackground"
        android:id="@+id/cvBeaches">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/beaches_item_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/beach_icon"/>

            <TextView
                android:id="@+id/beaches_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/title_beaches_activity"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>